force-app/main/default/objects/Klarna_Setting__mdt/Klarna_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Klarna Setting</label>
    <pluralLabel>Klarna Settings</pluralLabel>
</CustomObject>