force-app/main/default/objects/Klarna_Setting__mdt/fields/Description_Details__c.field-meta.xml
<CustomField>
    <fullName>Description_Details__c</fullName>
    <defaultValue>(&quot;Your order with Checkout.com&quot;)</defaultValue>
    <inlineHelpText
  >This text will be included in description field from klarna object for the capture Klarna payment.</inlineHelpText>
    <label>Description Details</label>
    <type>TextArea</type>
</CustomField>