force-app/main/default/objects/Klarna_Setting__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <inlineHelpText
  >By default the environment will be set to Sandbox, If you want to use Klarna in production, please make sure to set it as Production.</inlineHelpText>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
                <default>true</default>
                <label>Sandbox</label>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>