force-app/main/default/objects/Klarna_Setting__mdt/fields/Include_Description__c.field-meta.xml
<CustomField>
    <fullName>Include_Description__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Description</label>
    <type>Checkbox</type>
</CustomField>