force-app/main/default/objects/Klarna_Setting__mdt/fields/Include_Products__c.field-meta.xml
<CustomField>
    <fullName>Include_Products__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText
  >If checked, the products related to the order summary corresponding to the payment will be included.</inlineHelpText>
    <label>Include Products</label>
    <type>Checkbox</type>
</CustomField>