force-app/main/default/objects/Klarna_Setting__mdt/fields/Include_Shipping_Delay__c.field-meta.xml
<CustomField>
    <fullName>Include_Shipping_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Shipping Delay</label>
    <type>Checkbox</type>
</CustomField>