force-app/main/default/objects/Klarna_Setting__mdt/fields/Include_Shipping_Info__c.field-meta.xml
<CustomField>
    <fullName>Include_Shipping_Info__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText
  >If checked, the shipments related to the order summary corresponding to the payment will be included.</inlineHelpText>
    <label>Include Shipping Info</label>
    <type>Checkbox</type>
</CustomField>