force-app/main/default/objects/Klarna_Setting__mdt/fields/Shipping_Delay_Value__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Delay_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText
  >If you want to submit a value greater than 0, this needs to be enabled in your account.</inlineHelpText>
    <label>Shipping Delay Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>